Icon Spacing Fixes

--- a/css/style.css
+++ b/css/style.css
@@ -426,27 +426,13 @@ p.phone span.fa {
 .agileinfo-social-grids ul li a span.fa.fa-facebook:hover {
     color: #3b5998;
 }
-.agileinfo-social-grids ul li a span.fa.fa-twitter{
+.agileinfo-social-grids ul li a span.fa.fa-linkedin-square{
 	margin:0 1em;
 }
-.agileinfo-social-grids ul li a span.fa.fa-twitter:hover{
+.agileinfo-social-grids ul li a span.fa.fa-linkedin-square:hover{
 	color: #55acee;
 }
-.agileinfo-social-grids ul li a span.fa.fa-rss{
-	margin:0 1em 0 0;
-}
-.agileinfo-social-grids ul li a span.fa.fa-rss:hover{
-	color: #f26522;
-}
-.agileinfo-social-grids ul li a span.fa.fa-linkedin-square{
-	margin:0 1em 0 0;
-}
-.agileinfo-social-grids ul li a span.fa.fa-linkedin-square:hover{
-	color: #f26522;
-}
-.agileinfo-social-grids ul li a span.fa.fa-vk:hover{
-	color: #45668e;
-}
+
 
 /*-- //social icons --*/
 
